k8s/base/accounts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts
spec:
  type: ClusterIP
  selector:
    app: accounts
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
